# fraiseql-seed

./: .gitignore  .pre-commit-config.yaml  LICENSE  MONOREPO_STRUCTURE.md  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  version.json
.github/: markdown-link-check.json  markdownlint.json
.github/workflows/: deploy.yml  quality-gate.yml  sbom-generation.yml  security-compliance.yml  test.yml
.phases/: 20260103-phase-a3-phase2-core-functions.md  20260103-phase-a3-phase3-production-readiness.md  README.md  fraiseql-data-design.md  phase-1-green.md  phase-1-greenfield.md  phase-1-qa.md  phase-1-red.md  phase-1-refactor.md
extensions/trinity/: API.md  INSTALL.md  PHASE1_SUMMARY.md  README.md  TROUBLESHOOTING.md  USAGE.md  test_phase1_dev.sql  test_phase1_foundation.sql  test_phase2_core_functions.sql  test_phase2_performance.sql  test_phase3_production.sql  trinity--1.0.sql  trinity.control
extensions/trinity/examples/: basic-manufacturer-model.sql  performance-testing.sql
fraiseql_seed/: __init__.py  config.py  install_extensions.sql
fraiseql_seed/core/: __init__.py  models.py
scripts/: bootstrap-monorepo.sh  complete-setup.sh  generate-boilerplate.py  version_manager.py
shared/patterns/: pattern.yaml  printoptim.yaml
