[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fraiseql-seed"
version = "0.1.0"
description = "Seed data management tool for FraiseQL projects with Trinity identifier pattern"
authors = ["FraiseQL Team <team@fraiseql.dev>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/fraiseql/fraiseql-seed"
repository = "https://github.com/fraiseql/fraiseql-seed"
documentation = "https://fraiseql-seed.readthedocs.io"
keywords = ["fraiseql", "seed-data", "trinity-pattern", "database", "postgresql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "fraiseql_seed"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {extras = ["binary"], version = "^3.1"}
click = "^8.1"
jinja2 = "^3.1"
pydantic = "^2.0"
pydantic-settings = "^2.0"
rich = "^13.0"
tomli = {version = "^2.0", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
black = "^23.0"
ruff = "^0.1"
mypy = "^1.7"

[tool.poetry.scripts]
fraiseql-seed = "fraiseql_seed.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=fraiseql_seed --cov-report=term-missing"
