# fraiseql-seed - Monorepo Root Configuration
# This is a workspace root that coordinates multiple packages

[project]
name = "fraiseql-seed"
version = "0.1.0"
description = "FraiseQL Seed - UUID patterns and data generation for PostgreSQL"
authors = [
    {name = "Lionel Hamayon", email = "lionel.hamayon@evolution-digitale.fr"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

# Include workspace packages for development
dependencies = [
    "fraiseql-uuid",
    "fraiseql-data",
]

# This is a workspace root, not a publishable package
[tool.uv]
managed = true

# Define workspace members
[tool.uv.workspace]
members = [
    "packages/fraiseql-uuid",
    "packages/fraiseql-data",
]

# Specify that these dependencies come from the workspace
[tool.uv.sources]
fraiseql-uuid = { workspace = true }
fraiseql-data = { workspace = true }

# Shared development dependencies
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# Shared tool configurations
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test markers for categorization
markers = [
    "unit: Unit tests (fast, isolated, no external dependencies)",
    "integration: Integration tests (database required)",
    "slow: Tests that take a long time to run",
]

# Output options
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Per-package overrides
[[tool.mypy.overrides]]
module = "fraiseql_data.*"
# fraiseql-data is in beta (v0.1.0) - progressive type checking
# TODO: Gradually enable stricter checks as code matures
disallow_untyped_calls = false
warn_return_any = false
check_untyped_defs = false
disallow_any_generics = false
disallow_subclassing_any = false

[tool.coverage.run]
source = ["packages/*/src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
