# fraiseql-seed - Monorepo Root Configuration
# This is a workspace root that coordinates multiple packages

[project]
name = "fraiseql-seed"
version = "0.1.2"
description = "FraiseQL Seed - UUID patterns and data generation for PostgreSQL"
authors = [
    {name = "Lionel Hamayon", email = "lionel.hamayon@evolution-digitale.fr"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

# Include workspace packages for development
dependencies = [
    "fraiseql-uuid",
    "fraiseql-data",
]

# This is a workspace root, not a publishable package
[tool.uv]
managed = true

# Define workspace members
[tool.uv.workspace]
members = [
    "packages/fraiseql-uuid",
    "packages/fraiseql-data",
]

# Specify that these dependencies come from the workspace
[tool.uv.sources]
fraiseql-uuid = { workspace = true }
fraiseql-data = { workspace = true }

# Shared development dependencies
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "ty>=0.0.7",
    "pre-commit>=3.6.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# Shared tool configurations
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # Ruff-specific
    "PERF",   # perflint
    "FURB",   # refurb
]
ignore = [
    "PLC0415",  # import-outside-top-level — lazy imports are intentional (optional deps, CLI)
    "PLR0912",  # too-many-branches — CLI handlers are naturally branchy
    "PLR0913",  # too-many-arguments — Click commands have many parameters by design
    "PLR0915",  # too-many-statements — CLI handlers are naturally long
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
"packages/*/tests/**" = ["PLR2004", "ARG001"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test markers for categorization
markers = [
    "unit: Unit tests (fast, isolated, no external dependencies)",
    "integration: Integration tests (database required)",
    "slow: Tests that take a long time to run",
]

# Output options
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# ty 0.0.x is young — suppress categories where inference is unreliable
# Revisit as ty matures and stub coverage improves
unresolved-import = "warn"       # missing stubs: click, rich
no-matching-overload = "warn"    # psycopg dynamic SQL patterns
invalid-argument-type = "warn"   # psycopg LiteralString requirement
not-subscriptable = "warn"       # None narrowing limitations
invalid-method-override = "warn" # covariance/contravariance in overrides
call-top-callable = "warn"       # unknown callable types (Faker lambdas)
unresolved-attribute = "warn"    # mixin/inheritance inference
invalid-assignment = "warn"      # dict key type inference
not-iterable = "warn"            # Optional narrowing
invalid-return-type = "warn"     # return type covariance
unsupported-operator = "warn"    # operator overload inference
missing-argument = "warn"        # overload resolution

[tool.coverage.run]
source = ["packages/*/src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
